add default api_base for openai models and instruction comments in degpt/config.ini

--- a/degpt/config.ini
+++ b/degpt/config.ini
@@ -1,4 +1,7 @@
 [LLM]
 model = gpt-3.5-turbo
 api_key =
-api_base =
+api_base = https://api.openai.com/v1/
+
+; For openai online LLMs, the default api_base is https://api.openai.com/v1/
+; For local LLMs, the api_base is usually like http://ip:port/v1/
