degpt/role.py: add support for saving results to OUTPUT_DIR

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,linux
+
+# Ignore output dir
+output/
